Adicionada lista não ordenada

--- a/Teste primeira página.html
+++ b/Teste primeira página.html
@@ -1,10 +1,23 @@
 <html>
     <head>
     <title>Minha primeira pagina</title>
+    <!-- Mensagem que fica no topo da pagina -->
     </head>
     <body>
        <p>Olá, essa é minha primeira página em HTML!</p> 
         <p>Espero que tenha gostado!</p>
         <p>Link para o <a href="https://www.youtube.com/channel/UCkGgiDnAJcrYWJcm6AZTy2Q">Youtube</a></p>
-       <img src="ImagemYaggoGames.jpg"
+       <img src="ImagemYaggoGames.jpg"> 
+
+       <!-- lista não ordenada -->
+       <ol>
+        <li>Git init</li>
+        <li>Git Status</li>
+        <li>Git Add</li>
+        <li>Git Commit</li>
+        <li>Git Log</li>
+       </ol>
+
+     </body>
+       
 </html>
