--- a/Teste primeira página.html
+++ b/Teste primeira página.html
@@ -4,19 +4,23 @@
     <!-- Mensagem que fica no topo da pagina -->
     </head>
     <body>
-       <p>Olá, essa é minha primeira página em HTML!</p> 
+       <h1>Olá, essa é minha primeira página em HTML!</h1> 
         <p>Espero que tenha gostado!</p>
-        <p>Link para o <a href="https://www.youtube.com/channel/UCkGgiDnAJcrYWJcm6AZTy2Q">Youtube</a></p>
-       <img src="ImagemYaggoGames.jpg"> 
+        <p>Link para <a href= "https://www.youtube.com/channel/UCkGgiDnAJcrYWJcm6AZTy2Q">Youtube</a></p>
+        <a href="https://www.youtube.com/channel/UCkGgiDnAJcrYWJcm6AZTy2Q"><img src="ImagemYaggoGames.jpg"></a>
+        <h2>Código Git </h2>
 
        <!-- lista não ordenada -->
        <ol>
+        <!-- Item da lista -->
         <li>Git init</li>
         <li>Git Status</li>
         <li>Git Add</li>
         <li>Git Commit</li>
         <li>Git Log</li>
        </ol>
+
+       <a href="https://youtu.be/UuLOeNviquo?si=vIq1L99gEqa6T_hJ" target="_blank"><button>Veja meu primeiro vídeo do canal </button></a>
 
      </body>
        
