--- a/Teste primeira página.html
+++ b/Teste primeira página.html
@@ -20,8 +20,71 @@
         <li>Git Log</li>
        </ol>
 
-       <a href="https://youtu.be/UuLOeNviquo?si=vIq1L99gEqa6T_hJ" target="_blank"><button>Veja meu primeiro vídeo do canal </button></a>
+       <a href="https://youtu.be/UuLOeNviquo?si=vIq1L99gEqa6T_hJ" target="_blank" <style>
+        
+        </style>><button>Veja meu primeiro vídeo do canal </button></a>
 
+       <!-- Table, TR, TH e TD -->
+        <!-- A tag "Table" indica ao site que iremos criar uma tabela -->
+         <!-- Dentro da tabela, teremos linhas (TR, table  row) -->
+          <!-- cabeçalhos (TH, table header) e células (TD,table data) -->
+
+          <p> A seguir, minha disponibilidade para realização de reuniões:</p>
+
+          <table border="4" align="center" bgcolor="656a69">
+            <tr>
+              <th></th>
+              <th>Segunda-feira</th>
+              <th>Terça-feira</th>
+              <th>Quarta-feira</th>
+              <th>Quinta-feira</th>
+              <th>Sexta-feira</th>
+              <th>Sábado</th>
+              <th>Domingo</th>
+              </tr>
+
+              <tr>
+              <th>Manhã</th>
+              <td>-</td>
+              <td>-</td>
+              <td>-</td>
+              <td>-</td>
+              <td>-</td>
+              <td>-</td>
+              <td>-</td>
+              </tr>
+
+              <tr>
+              <th>Tarde</th>
+              <td>X</td>
+              <td>X</td>
+              <td>X</td>
+              <td>X</td>
+              <td>X</td>
+              <td>X</td>
+              <td>X</td>
+              </tr>
+
+              <tr>
+              <th>Noite</th>
+              <td>X</td>
+              <td>-</td>
+              <td>X</td>
+              <td>-</td>
+              <td>X</td>
+              <td>X</td>
+              <td>X</td>
+            </tr>
+
+          </table>
+
+          <style>
+            body {
+                background-color: #000000;
+                font-family: Arial, sans-serif;
+                color:rgb(255, 255, 255)
+            }
+            </style>
      </body>
        
 </html>
